--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "1.35.3",
+    "@supabase/ui": "0.36.5",
+    "@tailwindcss/typography": "0.5.2",
+    "autoprefixer": "10.4.7",
+    "easymde": "2.16.1",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "postcss": "8.4.14",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-markdown": "8.0.3",
+    "react-simplemde-editor": "5.0.2",
+    "tailwindcss": "3.0.24",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "eslint": "8.16.0",
