--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "@supabase/supabase-js": "1.35.3",
     "@supabase/ui": "0.36.5",
     "@tailwindcss/typography": "0.5.2",
-    "autoprefixer": "10.4.7",
     "easymde": "2.16.1",
     "next": "12.1.6",
-    "postcss": "8.4.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.3",
     "react-simplemde-editor": "5.0.2",
-    "tailwindcss": "3.0.24",
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "autoprefixer": "10.4.7",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "8.4.14",
+    "tailwindcss": "3.0.24"
   }
 }
